--- a/WWW/Views/Home/Index.cshtml
+++ b/WWW/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
+﻿@using WWW.Models;
+@model Tuple<List<PlanetModel>, List<TranslationTextModel>>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Test</h1>
