--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -5,4 +5,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>@Model.Item1[0].Info_as_json</h1>
+<article>
+    <section>
+        <h2>Our solar system</h2>
+        <img src="/assets/img/solar_system.png" alt="Our solar system" title="Our solar system"/>
+        <p>Our solar system is very large, and unique, but ofcourse there are others out there</p>
+    </section>
+
+    <section>
+        <h3>Did you know?</h3>
+        <p>Lorem ipsum dolor imero</p>
+    </section>
+</article>
+
+<div id="game">
+</div>
