--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -14,9 +14,25 @@
 
     <section>
         <h3>Did you know?</h3>
-        <p>Lorem ipsum dolor imero</p>
+        <p>there are only things in our solar system that you can’t even guess</p>
     </section>
 </article>
 
-<div id="game">
-</div>
+<article>
+    <section>
+        <img src="/assets/img/earthImpact.jpg" alt="Earth Impact" title="Esarth Impact"/>
+    </section>
+
+    <section>
+        <h3>History of the Earth</h3>
+        <p>Learn the history of a remarkable planet. This is nothing like what we found in the universe.</p>
+    </section>
+</article>
+
+<article>
+    <img src="/assets/img/lunar.jpg" alt="Lunar" title="Lunar"/>
+</article>
+
+<article id="game">
+    <model-viewer src="/assets/3d/earth.glb" id="earth3d" auto-rotate rotation-per-second="5deg"></model-viewer>
+</article>
