--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
             </nav>
 
             <div class="languages">
-                <img src="/assets/img/flag_da.png" alt="Dansk" title="Dansk" class="flag"/>
-                <img src="/assets/img/flag_en.png" alt="English" title="English" class="flag"/>
-                <img src="/assets/img/flag_hu.png" alt="Magyar" title="Magyar" class="flag"/>
+                <img src="/assets/img/flag_da.png" alt="Dansk" title="Dansk" class="flag" data-flag="da" onclick="SetLanguage(this);"/>
+                <img src="/assets/img/flag_en.png" alt="English" title="English" class="flag" data-flag="en" onclick="SetLanguage(this);"/>
+                <img src="/assets/img/flag_hu.png" alt="Magyar" title="Magyar" class="flag" data-flag="hu" onclick="SetLanguage(this);"/>
             </div>
         </div>
     </header>
