Closes the database connection from the API

--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -34,5 +34,14 @@
 </article>
 
 <article id="game">
-
+    <img src="/assets/img/planet/sun.png" alt="sun" title="You can't go here"/>
+    <img src="/assets/img/planet/mercury.png" alt="mercury" title="Go to mercury"/>
+    <img src="/assets/img/planet/venus.png" alt="venus" title="Go to venus"/>
+    <img src="/assets/img/planet/earth.png" alt="earth" title="Go to earth"/>
+    <img src="/assets/img/planet/mars.png" alt="mars" title="Go to mars"/>
+    <img src="/assets/img/planet/jupiter.png" alt="jupiter" title="Go to jupiter"/>
+    <img src="/assets/img/planet/saturn.png" alt="saturn" title="Go to saturn"/>
+    <img src="/assets/img/planet/uranus.png" alt="uranus" title="Go to uranus"/>
+    <img src="/assets/img/planet/neptune.png" alt="neptune" title="Go to neptune"/>
+    <img src="/assets/img/planet/pluto.png" alt="pluto" title="Go to pluto"/>
 </article>
