--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Kilgharrah</title>
     <link rel="stylesheet" href="/css/site.css" />
-    <script src="/js/app.js" defer></script>
 </head>
 <body>
     <header id="home">
@@ -20,9 +19,9 @@
             </nav>
 
             <div class="languages">
-                <img src="/assets/img/flag_da.png" alt="Dansk" title="Dansk" class="flag" data-flag="da" onclick="SetLanguage(this);"/>
-                <img src="/assets/img/flag_en.png" alt="English" title="English" class="flag" data-flag="en" onclick="SetLanguage(this);"/>
-                <img src="/assets/img/flag_hu.png" alt="Magyar" title="Magyar" class="flag" data-flag="hu" onclick="SetLanguage(this);"/>
+                <img src="/assets/img/flag_da.png" alt="Dansk" title="Dansk" class="flag" data-flag="da"/>
+                <img src="/assets/img/flag_en.png" alt="English" title="English" class="flag" data-flag="en"/>
+                <img src="/assets/img/flag_hu.png" alt="Magyar" title="Magyar" class="flag" data-flag="hu"/>
             </div>
         </div>
     </header>
