--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
         <div class="inline">
             <nav>
                 <ul>
-                    <li><a href="#home" class="underline hover from-middle">Home</a></li>
-                    <li><a href="#game" class="underline hover from-middle">Game</a></li>
-                    <li><a href="#about" class="underline hover from-middle">About</a></li>
+                    <li><a href="#home" class="underline hover from-middle" data-translation="8">Home</a></li>
+                    <li><a href="#game" class="underline hover from-middle" data-translation="9">Game</a></li>
+                    <li><a href="#about" class="underline hover from-middle" data-translation="10">About</a></li>
                 </ul>
             </nav>
 
@@ -33,15 +33,15 @@
     <footer id="about">
         <div>
             <h2>Kilgharrah</h2>
-            <p>
+            <p data-translation="14">
                 This website is created for the childrens who want to learn more about our solar system where we all live.
                 They can learn a lot of useful things about space and planets in a playful way. We make this website easy to use and interesting.Also they can choose different languages and different levels according their knowledge about the space.
             </p>
         </div>
 
         <div>
-            <h2>The team:</h2>
-            <p>
+            <h2 data-translation="15">The team:</h2>
+            <p data-translation="22">
                 Lord Kent<br />
                 Marcus the engineer<br />
                 Kristóf, the one that got away<br />
