--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -256,7 +256,6 @@ article {
     gap: 1rem;
     background-color: rgba(50, 50, 50, .5);
     border-radius: 1rem;
-    padding: .69rem;
 }
 
     .answer-grid button[type=button] {
@@ -279,9 +278,14 @@ article {
     transition: all .15s ease-in-out;
 }
 
-#game img[data-click].inactive {
-    filter: grayscale(100%) brightness(.4);
-}
+
+    #game img[data-click].active {
+        transform: scale(1.3);
+    }
+
+    #game img[data-click].inactive {
+        filter: grayscale(100%) brightness(.4);
+    }
 
     #game img[data-click]:hover {
         transform: scale(1.25);
