Added lose effect

--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
         <button type="button" class="start-btn" data-translation="7">Start game</button>
 
         <section class="answer-grid hidden">
-                <button class="overflow-dots" type="button" data-index="0">Mercury</button>
+                @*<button class="overflow-dots" type="button" data-index="0">Mercury</button>
                 <button class="overflow-dots" type="button" data-index="1">Venus</button>
                 <button class="overflow-dots" type="button" data-index="2">Earth</button>
                 <button class="overflow-dots" type="button" data-index="3">Mars</button>
@@ -86,7 +86,7 @@
                 <button class="overflow-dots" type="button" data-index="5">Saturn</button>
                 <button class="overflow-dots" type="button" data-index="6">Uranus</button>
                 <button class="overflow-dots" type="button" data-index="7">Neptune</button>
-                <button class="overflow-dots" type="button" data-index="8">Pluto</button>
+                <button class="overflow-dots" type="button" data-index="8">Pluto</button>*@
         </section>
     </article>
 
