Added planet locks

--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -64,15 +64,15 @@
 
         <section>
             <img src="/assets/img/planet/sun.png" alt="Sun" title="You can't go here" />
-            <img src="/assets/img/planet/mercury.png" alt="Mercury" title="Go to mercury" data-index="0" data-click="0" />
-            <img src="/assets/img/planet/venus.png" alt="Venus" title="Go to venus" data-index="1" data-click="1" />
-            <img src="/assets/img/planet/earth.png" alt="Earth" title="Go to earth" data-index="2" data-click="2" />
-            <img src="/assets/img/planet/mars.png" alt="Mars" title="Go to mars" data-index="3" data-click="3" />
-            <img src="/assets/img/planet/jupiter.png" alt="Jupiter" title="Go to jupiter" data-index="4" data-click="4" />
-            <img src="/assets/img/planet/saturn.png" alt="Saturn" title="Go to saturn" data-index="5" data-click="5" />
-            <img src="/assets/img/planet/uranus.png" alt="Uranus" title="Go to uranus" data-index="6" data-click="6" />
-            <img src="/assets/img/planet/neptune.png" alt="Neptune" title="Go to neptune" data-index="7" data-click="7" />
-            <img src="/assets/img/planet/pluto.png" alt="Pluto" title="Go to pluto" data-index="8" data-click="8" />
+            <img src="/assets/img/planet/mercury.png" alt="Mercury" title="Go to mercury" data-index="0" data-click="0" data-lock="q"/>
+            <img src="/assets/img/planet/venus.png" alt="Venus" title="Go to venus" data-index="1" data-click="1" data-lock="w"/>
+            <img src="/assets/img/planet/earth.png" alt="Earth" title="Go to earth" data-index="2" data-click="2" data-lock="e"/>
+            <img src="/assets/img/planet/mars.png" alt="Mars" title="Go to mars" data-index="3" data-click="3" data-lock="r"/>
+            <img src="/assets/img/planet/jupiter.png" alt="Jupiter" title="Go to jupiter" data-index="4" data-click="4" data-lock="t"/>
+            <img src="/assets/img/planet/saturn.png" alt="Saturn" title="Go to saturn" data-index="5" data-click="5" data-lock="y"/>
+            <img src="/assets/img/planet/uranus.png" alt="Uranus" title="Go to uranus" data-index="6" data-click="6" data-lock="u"/>
+            <img src="/assets/img/planet/neptune.png" alt="Neptune" title="Go to neptune" data-index="7" data-click="7" data-lock="i"/>
+            <img src="/assets/img/planet/pluto.png" alt="Pluto" title="Go to pluto" data-index="8" data-click="8" data-lock="o"/>
         </section>
 
         <button type="button" class="start-btn" data-translation="7">Start game</button>
