Fixed styling and added gifs

--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -246,7 +246,7 @@ article {
             flex-flow: row wrap;
             align-items: center;
             justify-content: center;
-            gap: 1rem;
+            gap: 2rem;
             width: 100%;
         }
 
@@ -277,6 +277,7 @@ article {
 #game img[data-click] {
     cursor: pointer;
     transition: all .15s ease-in-out;
+    max-width: 10rem;
 }
 
 
