--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
         </section>
 
         <section>
-            <img src="/assets/img/planet/sun.png" alt="Sun" title="You can't go here" />
+            <img src="/assets/img/planet/sun.png" alt="Sun" title="You can't go here" style="max-width: 10rem;" />
             <img src="/assets/img/planet/mercury.gif" alt="Mercury" title="Go to mercury" data-index="0" data-click="0" data-lock="q"/>
             <img src="/assets/img/planet/venus.gif" alt="Venus" title="Go to venus" data-index="1" data-click="1" data-lock="w"/>
             <img src="/assets/img/planet/earth.gif" alt="Earth" title="Go to earth" data-index="2" data-click="2" data-lock="e"/>
