--- a/Website/Views/Home/Index.cshtml
+++ b/Website/Views/Home/Index.cshtml
@@ -63,16 +63,16 @@
         </section>
 
         <section>
-            <img src="/assets/img/planet/sun.png" alt="Sun" title="You can't go here" style="max-width: 10rem;" />
-            <img src="/assets/img/planet/mercury.gif" alt="Mercury" title="Go to mercury" data-index="0" data-click="0" data-lock="q"/>
-            <img src="/assets/img/planet/venus.gif" alt="Venus" title="Go to venus" data-index="1" data-click="1" data-lock="w"/>
+            <img src="/assets/img/planet/sun.gif" alt="Sun" title="You can't go here" style="max-width: 20rem;box-shadow: 0 0 8rem 1.6rem orange;border-radius: 50%;" />
+            <img src="/assets/img/planet/mercury.gif" alt="Mercury" title="Go to mercury" data-index="0" data-click="0" data-lock="q" style="max-width: 6rem;"/>
+            <img src="/assets/img/planet/venus.gif" alt="Venus" title="Go to venus" data-index="1" data-click="1" data-lock="w" style="max-width: 7rem;"/>
             <img src="/assets/img/planet/earth.gif" alt="Earth" title="Go to earth" data-index="2" data-click="2" data-lock="e"/>
-            <img src="/assets/img/planet/mars.gif" alt="Mars" title="Go to mars" data-index="3" data-click="3" data-lock="r"/>
-            <img src="/assets/img/planet/jupiter.gif" alt="Jupiter" title="Go to jupiter" data-index="4" data-click="4" data-lock="t"/>
-            <img src="/assets/img/planet/saturn.gif" alt="Saturn" title="Go to saturn" data-index="5" data-click="5" data-lock="y"/>
-            <img src="/assets/img/planet/uranus.gif" alt="Uranus" title="Go to uranus" data-index="6" data-click="6" data-lock="u"/>
-            <img src="/assets/img/planet/neptune.gif" alt="Neptune" title="Go to neptune" data-index="7" data-click="7" data-lock="i"/>
-            <img src="/assets/img/planet/pluto.gif" alt="Pluto" title="Go to pluto" data-index="8" data-click="8" data-lock="o"/>
+            <img src="/assets/img/planet/mars.gif" alt="Mars" title="Go to mars" data-index="3" data-click="3" data-lock="r" style="max-width: 4.4rem;"/>
+            <img src="/assets/img/planet/jupiter.gif" alt="Jupiter" title="Go to jupiter" data-index="4" data-click="4" data-lock="t" style="max-width: 20rem;"/>
+            <img src="/assets/img/planet/saturn.gif" alt="Saturn" title="Go to saturn" data-index="5" data-click="5" data-lock="y" style="max-width: 15.8rem;"/>
+            <img src="/assets/img/planet/uranus.gif" alt="Uranus" title="Go to uranus" data-index="6" data-click="6" data-lock="u" style="max-width: 8.1rem;"/>
+            <img src="/assets/img/planet/neptune.gif" alt="Neptune" title="Go to neptune" data-index="7" data-click="7" data-lock="i" style="max-width: 6.9rem;"/>
+            <img src="/assets/img/planet/pluto.gif" alt="Pluto" title="Go to pluto" data-index="8" data-click="8" data-lock="o" style="max-width: 3.3rem;"/>
         </section>
 
         <button type="button" class="start-btn" data-translation="7">Start game</button>
