--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -270,32 +270,44 @@ article {
         border-radius: 1rem;
     }
 
+        .answer-grid button[type=button].right {
+            background-color: lime;
+        }
+
+        .answer-grid button[type=button].wrong {
+            background-color: red;
+        }
+
         .answer-grid button[type=button]:hover {
             background: rgba(0, 100, 200, .4);
         }
 
-#game img[data-click] {
-    cursor: pointer;
-    transition: all .15s ease-in-out;
-    max-width: 10rem;
+#game {
+    padding-top: 10rem;
 }
 
-
-    #game img[data-click].active {
-        transform: scale(1.3);
+    #game img[data-click] {
+        cursor: pointer;
+        transition: all .15s ease-in-out;
+        max-width: 8rem;
     }
 
-    #game img[data-click].inactive {
-        filter: grayscale(100%) brightness(.4);
-    }
 
-    #game img[data-click].destroyed {
-        filter: blur(.5rem) grayscale(.8);
-    }
+        #game img[data-click].active {
+            transform: scale(1.3);
+        }
 
-    #game img[data-click]:hover {
-        transform: scale(1.25);
-    }
+        #game img[data-click].inactive {
+            filter: grayscale(100%) brightness(.4);
+        }
+
+        #game img[data-click].destroyed {
+            filter: blur(.5rem) grayscale(.8);
+        }
+
+        #game img[data-click]:hover {
+            transform: scale(1.25);
+        }
 
 .start-btn {
     cursor: pointer;
@@ -355,8 +367,8 @@ article {
             gap: 2rem;
         }
 
-        .modal .header .animatedIcon {
-            width: 2.5em;
+        .modal .header .icon {
+            width: 5em;
         }
 
         .modal .header button {
